fixed alignment for larger res

--- a/main.css
+++ b/main.css
@@ -74,6 +74,7 @@ h2{
 
     .container{
         display: flex;
+        justify-content: space-evenly;
     }
 
     .bio{
